# robustoed

./: README.md  pyproject.toml
examples/: augment_two_step_demo.py  baranyi_augment.py  baranyi_screening.py  manual_screen_then_augment.py  quick_test.py  screen_params_demo.py  sensitivity_formal.py  sensitivity_quick.py
src/robustoed/: __init__.py  augment.py  augment.py.bak  criterion_d.py  fisher.py  grid.py  model_sympy.py  optim.py  regularize.py  screening.py  sensitivity.py  types.py
src/robustoed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
